[package]
name = "cxpk"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.24"
png = "0.17"
toml = "0.8"
walkdir = "2.5"
bytemuck = "1.0"
rayon = "1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
xxhash-rust = { version = "0.8.11", features = ["xxh64"] }
clap = { version = "4.6.0", features = ["derive"] }
